# weft

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml  tox.ini
docs/: graph-data.js  graph.css  graph.js  index.html
tests/: test_cli.py  test_graph.py  test_inference.py  test_parser.py
weft/: __init__.py  cli.py
weft/graph/: __init__.py  persistence.py  social_graph.py
weft/inference/: __init__.py  adjacency.py  ai_heuristic.py  base.py  binary_sequence.py  direct_addressing.py  indirect_addressing.py
weft/parser/: __init__.py  znc.py
weft/visualization/: __init__.py  visjs.py
weft/visualization/templates/: graph-data.js.j2  graph.css  graph.html.j2  graph.js
