[project]
name = "weft"
version = "0.1.0"
description = "IRC social network visualizer — based on PieSpy"
authors = [{name = "mattbox"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "networkx>=3.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
ai = [
    "litellm>=1.0",
]

[project.scripts]
weft = "weft.cli:cli"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weft"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"